Fixed CSS on smaller screen (or tried to, at least)

--- a/public/src/vue/less/_globals.less
+++ b/public/src/vue/less/_globals.less
@@ -561,7 +561,7 @@ strong,b {
   padding: @t-skipline/2;
 }
 .padding-verysmall {
-  padding: @t-skipline/4;
+  padding: @t-skipline;
 }
 .padding-veryverysmall {
   padding: @t-skipline/8;
