--- a/public/src/vue/less/_variables.less
+++ b/public/src/vue/less/_variables.less
@@ -48,7 +48,7 @@
   --font-size: 1.1rem; /* Most browsers use a default font size of 16px */
   --input-font-size-big: 1.4rem;
 
-  --line-height: 1.35;
+  --line-height: 1.5;
   --input-box-shadow: none;
   --input-border-width: 3px;
   --input-border-color: @c-gris;
