--- a/public/src/vue/style.less
+++ b/public/src/vue/style.less
@@ -809,8 +809,28 @@ body {
 }
 
 
-.m_listview, .m_projectview, .m_captureview, .m_publicationsview, .m_publicationview, .m_mediaview {
+.m_listview, .m_projectview, .m_publicationsview, .m_publicationview, .m_mediaview {
   position: absolute;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  z-index: 1;
+
+  // .bg-creme;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+
+
+  html.touchevents & {
+    // position: relative;
+    // height:auto !important;
+    // overflow: auto;
+  }
+  .custom_scrollbar(8px, 5px, 6px);
+}
+
+.m_captureview {
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   z-index: 1;
@@ -2504,7 +2524,6 @@ small {
     z-index: 1;
 
     .m_panel--buttons--row {
-      position: absolute;
       width: 100%;
       height: 100%;
       display: flex;
@@ -4220,7 +4239,7 @@ small {
       margin: 0;
       cursor: pointer;
       min-height: 3.24rem;
-      padding: 0 0.81rem  !important;
+      padding: 0 0.85rem  !important;
       border-radius: 6px !important;
       transition: color 0.25s ease-out, opacity 0.5s;
       color: #fff !important;
